--- a/php.ini
+++ b/php.ini
@@ -1,5 +1,5 @@
 ; Enable php core functions
-google_app_engine.enable_functions = "php_sapi_name, php_uname, gc_enabled"
+google_app_engine.enable_functions = "php_sapi_name, php_uname, gc_enabled, getmypid"
 
 ; Load Google Cloud Storage Buckets here
 google_app_engine.allow_include_gs_buckets = "mallento2.appspot.com"
