admin app check yaml

--- a/app.yaml
+++ b/app.yaml
@@ -15,8 +15,8 @@ handlers:
 - url: /remodal
   static_dir: remodal
 
-- url: /admin/.*
-  script: admin/index.php
+#- url: /admin
+#  script: admin/index.php
 
 - url: /.*
   script: index.php
