admin app check yaml

--- a/app.yaml
+++ b/app.yaml
@@ -15,11 +15,14 @@ handlers:
 - url: /remodal
   static_dir: remodal
 
-- url: /admin.*
-  script: admin/index.php
+- url: /admin
+  static_dir: admin
 
-- url: /admin/.*
-  script: admin/index.php
+#- url: /admin.*
+#  script: admin/index.php
+#
+#- url: /admin/.*
+#  script: admin/index.php
 #- url: /admin
 #  script: admin/index.php
 
