config app yaml

--- a/app.yaml
+++ b/app.yaml
@@ -6,7 +6,7 @@ handlers:
   - url: /.*
     script: index.php
 
-  - url: admin/.*
+  - url: /admin/.*
     script: admin/index.php
 
 #- url: /admin/css
