config app yaml

--- a/app.yaml
+++ b/app.yaml
@@ -3,11 +3,42 @@ api_version: 1
 threadsafe: yes
 
 handlers:
+  - url: /admin/css
+    static_dir: admin/css
+
+  - url: /admin/datepicker
+    static_dir: admin/datepicker
+
+  - url: /admin/js
+    static_dir: admin/js
+
+  - url: /admin/img
+    static_dir: admin/img
+
+  - url: /admin/images
+    static_dir: admin/images
+
   - url: /admin
     script: admin/index.php
 
   - url: /admin/.*
     script: admin/index.php
+
+  - url: /css
+    static_dir: css
+
+  - url: /js
+    static_dir: js
+
+  - url: /img
+    static_dir: img
+
+  - url: /remodal
+    static_dir: remodal
+
+  - url: /favicon\.ico
+    static_files: favicon.ico
+    upload: favicon.ico
 
   - url: /.*
     script: index.php
